fix: Not display error massage even if the section name is too long

--- a/src/app/features/board/ui/presenters/editable-section-name/editable-section-name.component.scss
+++ b/src/app/features/board/ui/presenters/editable-section-name/editable-section-name.component.scss
@@ -6,13 +6,6 @@
   position: relative;
 }
 
-.error-message {
-  position: absolute;
-  top: -24px;
-  width: 260px;
-  padding: 0 8px;
-}
-
 .editable-section-name {
   font-size: 20px;
   margin-bottom: 12px;
